# physics111-advanced-lab

./: LICENSE  README.md
atomic-physics/cython/: gsl_wlsq.pyx  setup.py
atomic-physics/scripts/: balmer.py
atomic-physics/tex/: atomic.tex  reference_list.bib
brownian-motion/: README.md
brownian-motion/scripts/: README.md  active_transport.py  brownian_motion_cells.py  cell_bulk_flow.py  combine_diffusion.py  combine_transport.py  diffusion.py  num_tracks.py  plot_disp_sq.py  plot_tracks.py
brownian-motion/simulations/: Particle.py  README.md  brownian.py  brownian_simple_1d.py  brownian_simple_2d.py  bulk_flow.py  many_particles.py  particles_bulk_flow.py
brownian-motion/tex/: brownian.tex  reference_list.bib
error-analysis/: README.md  config.h.in  configure.ac
error-analysis/data/: optical_data.fits
error-analysis/scripts/: Makefile.am  eaxhomework  plot_prob3.py  plot_prob4.py  plot_prob5.py
error-analysis/src/: Makefile.am  gammaray.c  gauss_stats.c  optical_pump.c
error-analysis/tex/: eaxreport.tex
lib/incl/: advancedlab.h
lib/src/: filter.c  fit_exp.c  fit_gaus.c  map.c  misc.c
muon-lifetime/: README.md  config.h.in  configure.ac
muon-lifetime/incl/: muonlifetime.h
muon-lifetime/scripts/: Makefile.am  combine_results.py  muonlifetime  plot_clockcalib.py  plot_eff_dig.py  plot_lifetime.py  plot_plinear.py  plot_timeres.py
muon-lifetime/src/: Makefile.am  catmufits.c  dcalib.c  eff_dig.c  getlifetime.c  mu2fits.c  muo_common.c  plinear.c  timeres.c
optical-pumping/: README.md
optical-pumping/scripts/: optical-pumping.py  plot85.py  plot87.py  test_plot.py
optical-pumping/scripts/opt_pump/: __init__.py  common.py
optical-pumping/tex/: ReferenceList.bib  optical-pumping.tex
